# PlatosCave

./: .example.env  .gitignore  LICENSE  LICENSE.md  NOTICE  Paper collection.xlsx  README.md  Taskfile.yml  cli.py  config.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  package-lock.json  package.json  sample.env  server.py  taskfile.yml
backend/: .dockerignore  Dockerfile  README.md  _perf.py  docker-compose.browser.yaml  factorized_experiment.py  llm_client.py  main.py  paper_io.py  prompts.py  pyproject.toml  requirements.txt  restart_server.sh  server.py  test_async_verification.py  test_visible_verification_fallback.py  verification_pipeline.py
backend/docker/remote-browser/: Dockerfile  start-browser.sh
blogpost/: index.html
cloudflared/: config.yaml
experiments/: README.md  ablation_registry.py  ablation_studies.py  ablation_studies_cli.py  batch_cli.py  download_pdfs_from_collection.py  factorized_collection_cli.py  generate_optuna_report_assets.py  grid_search.py  grid_search_cli.py  optuna_search.py  optuna_search_cli.py  paper_collection.py  plotting.py  rename_pdfs_to_simple_ids.py
frontend/: .dockerignore  gatsby-config.ts  gatsby-ssr.tsx  index.html  kg_realtime_scoring.py  package-lock.json  package.json  service_adapter.py  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts  wrangler.toml
graph_app/: README.md  __init__.py  bfs_api_min.py  frontend_bridge.py  graph_build.py  kg_realtime_scoring.py  schemas.py  server.py  service_adapter.py
nginx/: platoscave.conf
src/: cli.py
(+9085 files in other folders)
