[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use==0.9.4",
    "exa-py>=1.0.9",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "flask-cors>=4.0.0",
    "networkx>=3.5",
    "eventlet>=0.36.1",
    "numpy>=2.3.4",
    "pymupdf>=1.23.0",
]
